<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FC3A52">

    <TextView
        android:id="@+id/bannedexplain_title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="15dp"
        android:text="@string/bannedexplain_title1"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_below="@+id/bannedexplain_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/coloured_border_box"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bannedexplain_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/fragment6_text3"
            android:textColor="#fff"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/bannedexplain_text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/fragment6_text4"
            android:textColor="#fff"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/bannedexplain_text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/fragment6_text5"
            android:textColor="#fff"
            android:textSize="15dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/bannedexplain_title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:layout_margin="15dp"
        android:text="@string/bannedexplain_title2"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_below="@+id/bannedexplain_title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/coloured_border_box"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bannedexplain_text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment6_text5"
            android:layout_margin="10dp"
            android:text="@string/bannedexplain_text5"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_shape"
            android:layout_marginBottom="10dp"
            android:text="@string/bannedexplain_text6"
            android:textColor="#000"
            android:gravity="center_vertical"
            android:textSize="15dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:layout_gravity="center_horizontal"
            android:drawablePadding="20dp"
            android:padding="8dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_below="@+id/linear2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Exit"
        style="@style/AppTheme.Button"
        />

</RelativeLayout>