<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FC3A52">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fragment6_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="15dp"
                android:text="@string/fragment6_text1"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="20dp" />

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_below="@+id/fragment6_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/coloured_border_box">

                <TextView
                    android:id="@+id/fragment6_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/fragment6_text2"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_below="@+id/linear1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/coloured_border_box"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment6_text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/fragment6_text3"
                    android:textColor="#fff"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/fragment6_text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/fragment6_text4"
                    android:textColor="#fff"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/fragment6_text5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/fragment6_text5"
                    android:textColor="#fff"
                    android:textSize="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_below="@+id/linear2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/coloured_border_box">

                <TextView
                    android:id="@+id/fragment6_text6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment6_text5"
                    android:layout_margin="10dp"
                    android:text="@string/fragment6_text6"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="15dp" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:text="6/6"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="#f5586c"
                android:text="Got it!"
                android:textColor="#fff"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>