<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FC3A52">

    <ImageView
        android:id="@+id/fragment5_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="15dp"
        android:src="@drawable/find_location_illustration"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/fragment5_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment5_image"
        android:layout_margin="15dp"
        android:text="@string/fragment5_text1"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/fragment5_text2"
        android:layout_below="@+id/fragment5_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:text="@string/fragment5_text2"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/fragment5_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment5_text3"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/fragment5_text2" />
    
    <Button
        android:id="@+id/btnAskPermissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment5_text3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="Authorize Location Permission"
        android:textSize="15dp"
        style="@style/AppTheme.Button"/>

    <TextView
        android:id="@+id/fragment5_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment5_text4"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="15dp"
        android:layout_margin="15dp"
        android:layout_below="@+id/btnAskPermissions" />


    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"
                android:text="5/6"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="#f5586c"
                android:text="Next"
                android:textColor="#fff"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>