<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FC3A52">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/fragment3_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="Basic functions"
            android:textColor="#fff"
            android:textSize="28dp" />

        <LinearLayout
            android:id="@+id/fragment3_linear1"
            android:layout_below="@+id/fragment3_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_warning_white_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/fragment3_emercall"
                android:textColor="#fff"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment3_linear2"
            android:layout_below="@+id/fragment3_linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_folder_white_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:text="@string/fragment3_emerdict"
                android:textColor="#fff"
                android:textSize="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment3_linear3"
            android:layout_below="@+id/fragment3_linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_account_circle_white_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:text="@string/fragment3_emeraccount"
                android:textColor="#fff"
                android:textSize="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottombar_illustration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/fragment3_linear3">

            <TextView
                android:id="@+id/fragment3_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment4_title"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/fragment3_text1"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="15dp" />

            <include layout="@layout/bottom_navigation_bar"
                android:id="@+id/bottom_navigation_illustration"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/bottombar_illustration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tv_progress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_gravity="center_vertical"
                    android:text="3/6"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="#f5586c"
                    android:text="Next"
                    android:textColor="#fff"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>